Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
BTI429API SCHNDX __stdcall BTI429_SchedPulse1(INT dionum,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedReset(LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedRotate(LPVOID infoptr);
BTI429API INT __stdcall BTI429_SchedShift(INT msgnum,INT value,LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_SchedSlide(LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedSlideEnd(VOID);
BTI429API VOID __stdcall BTI429_SchedSlideMiddle(ULONG index,ULONG count,ULONG conflicts);
BTI429API VOID __stdcall BTI429_SchedSlideStart(ULONG factor);
BTI429API VOID __stdcall BTI429_SchedSort(LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedToBit(ULONG value,LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_SchedToMsec(ULONG value,LPVOID infoptr);
BTI429API VOID __stdcall BTI429_SchedUnsort(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedUser(ULONG useraddr,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedWalk(LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_SchedWriteBuf(LPBYTE bufptr,INT bufcount,ULONG schaddr,INT schedcount,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_TestProtocol(HCORE handleval);
BTI429API USHORT __stdcall BTI429_Transpose12(USHORT val);