Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS

            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedPulse1@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedPulse1(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedReset(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedRotate@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedRotate(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedShift@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedShift(Int32 msgnum, Int32 value, IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedSlide@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedSlide(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedSlideEnd@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedSlideEnd();
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedSlideMiddle@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedSlideMiddle(UInt32 index, UInt32 count, UInt32 conflicts);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedSlideStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedSlideStart(UInt32 factor);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedSort@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedSort(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedToBit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedToBit(UInt32 value, IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedToMsec@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedToMsec(UInt32 value, IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedUnsort@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_SchedUnsort(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedUser@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedUser(UInt32 useraddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedWalk@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_SchedWalk(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedWriteBuf@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedWriteBuf(ref byte bufptr, Int32 bufcount, UInt32 schaddr, Int32 schedcount, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_TestProtocol@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_TestProtocol(IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Transpose12@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_Transpose12(UInt16 val);
        }
